<resources>
    <string name="app_name">GyroController</string>
    <string name="search_device_hint">Search devices.</string>
    <string name="text_bluetooth_status">Status</string>
    <string name="text_enable_bluetooth">Enable</string>
    <string name="text_scan_bluetooth">Scan</string>
    <string name="text_pair">Pair</string>
    <string name="text_connect">Connect</string>
    <string name="text_client">Client</string>
    <string name="text_start_gyroscope">Start Gyro</string>
    <string name="text_stop_gyroscope">Stop Gyro</string>
    <string name="text_start_accelerometer">Start Accel</string>
    <string name="text_stop_accelerometer">Stop Accel</string>
    <string name="text_stop">Stop</string>
    <string name="text_disconnect">Disconnect</string>
    <string name="text_left">Left</string>
    <string name="text_right">Right</string>
    <string name="text_forward">Forward</string>
    <string name="text_backward">Backward</string>
    <string name="text_title">Gyro Controller</string>
    <string name="text_server">Server</string>
    <string name="text_send_coord">Send Random Coord</string>
    <string name="obstacle">obstacle</string>
    <string name="obstacle2">obstacle</string>
    <string name="object">object</string>
    <string name="text_old_version">Old Version</string>
</resources>
