<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/obstacle"
        android:layout_width="234dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="130dp"
        android:layout_marginEnd="14dp"
        android:contentDescription="@string/obstacle"
        android:src="@android:drawable/button_onoff_indicator_on" />

    <ImageView
        android:id="@+id/obstacle2"
        android:layout_width="234dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="186dp"
        android:contentDescription="@string/obstacle2"
        android:src="@android:drawable/button_onoff_indicator_on" />

    <ImageView
        android:id="@+id/object"
        android:layout_width="81dp"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/object"
        android:src="@android:drawable/btn_dialog" />

</RelativeLayout>